--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -33,17 +33,17 @@
             android:layout_height="wrap_content"
             android:hint="@string/password"
             android:inputType="textPassword"/>
+
         <Button
             android:id="@+id/btn_sign_up"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
             android:background="@color/colorPrimaryDark"
             android:padding="16dp"
             android:text="@string/sign_up"
-            android:textSize="18sp"
-            android:layout_marginTop="10dp"
-            android:textColor="@android:color/white"
             android:textAllCaps="false"
-            />
+            android:textColor="@android:color/white"
+            android:textSize="18sp" />
     </LinearLayout>
 </RelativeLayout>
