--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">@android:color/white</color>
+    <color name="colorPrimary">#585fff</color>
     <color name="colorPrimaryDark">#585fff</color>
     <color name="colorAccent">#D81B60</color>
-    <color name="backgroundColor">@android:color/white</color>
-    <color name="actionbar_text_color">#ffffff</color>
+    <color name="backgroundColor">#FFFFFF</color>
+    <color name="whitecolor">#FFFFFF</color>
 </resources>
