--- a/app/src/main/res/layout/fragment_buses.xml
+++ b/app/src/main/res/layout/fragment_buses.xml
@@ -6,12 +6,8 @@
     tools:context=".BusesFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="I AM BUSES TAB"
-        android:textSize="20sp"
-        android:gravity="center"
-        android:layout_centerInParent="true"/>
-
+        android:id="@+id/ListView"/>
 </RelativeLayout>
