--- a/app/src/main/res/layout/stations_row.xml
+++ b/app/src/main/res/layout/stations_row.xml
@@ -9,9 +9,9 @@
     <ImageView
         android:layout_width="75dp"
         android:layout_height="75dp"
-        android:id="@+id/imageBus"
-        android:src="@drawable/ic_bus"/>
-    
+        android:id="@+id/imageStations"
+        android:src="@drawable/ic_stations"/>
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -19,14 +19,14 @@
         android:orientation="vertical">
 
         <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/textView1"
-        android:text="@string/main_text"
-        android:textStyle="bold"
-        android:textSize="20sp"
-        android:layout_margin="5dp"
-        android:textColor="@android:color/black"/>
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView1"
+            android:text="@string/main_text"
+            android:textStyle="bold"
+            android:textSize="20sp"
+            android:layout_margin="5dp"
+            android:textColor="@android:color/black"/>
 
         <TextView
             android:layout_width="wrap_content"
